--- a/your-code/challenge-2.ipynb
+++ b/your-code/challenge-2.ipynb
@@ -24,28 +24,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "developing-printing",
+   "execution_count": 2,
+   "id": "8b847957",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code"
+    "import json\n",
+    "import requests as req"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 33,
+   "id": "developing-printing",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Response [200]>"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "url = 'https://api.github.com/repos/Ironhack-Data-Madrid-Octubre-2023/apuntes_clase/commits?since=2023-10-25T09:00:00Z'\n",
+    "res = req.get(url)\n",
+    "res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "id": "creative-stable",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "21"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(res.json())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "ongoing-taylor",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Example: print(variable[:10]) "
+    "commits = res.json()\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ongoing-taylor",
+   "id": "de2fd7ae",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4a158aba",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -67,7 +120,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.10.13"
   },
   "toc": {
    "base_numbering": 1,
