--- a/your-code/challenge-3.ipynb
+++ b/your-code/challenge-3.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "0f155401",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "id": "toxic-trading",
    "metadata": {},
    "outputs": [
@@ -56,41 +56,148 @@
        "<Response [200]>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "url = 'https://github.com/ironhack-datalabs/scavenger'\n",
+    "url = 'https://api.github.com/repos/ironhack-datalabs/scavenger'\n",
     "res = req.get(url)\n",
     "res"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "id": "static-stopping",
    "metadata": {},
    "outputs": [
     {
-     "ename": "JSONDecodeError",
-     "evalue": "Expecting value: line 8 column 1 (char 7)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mJSONDecodeError\u001b[0m                           Traceback (most recent call last)",
-      "File \u001b[0;32m~/anaconda3/envs/clase/lib/python3.10/site-packages/requests/models.py:971\u001b[0m, in \u001b[0;36mResponse.json\u001b[0;34m(self, **kwargs)\u001b[0m\n\u001b[1;32m    970\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m--> 971\u001b[0m     \u001b[39mreturn\u001b[39;00m complexjson\u001b[39m.\u001b[39;49mloads(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mtext, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n\u001b[1;32m    972\u001b[0m \u001b[39mexcept\u001b[39;00m JSONDecodeError \u001b[39mas\u001b[39;00m e:\n\u001b[1;32m    973\u001b[0m     \u001b[39m# Catch JSON-related errors and raise as requests.JSONDecodeError\u001b[39;00m\n\u001b[1;32m    974\u001b[0m     \u001b[39m# This aliases json.JSONDecodeError and simplejson.JSONDecodeError\u001b[39;00m\n",
-      "File \u001b[0;32m~/anaconda3/envs/clase/lib/python3.10/json/__init__.py:346\u001b[0m, in \u001b[0;36mloads\u001b[0;34m(s, cls, object_hook, parse_float, parse_int, parse_constant, object_pairs_hook, **kw)\u001b[0m\n\u001b[1;32m    343\u001b[0m \u001b[39mif\u001b[39;00m (\u001b[39mcls\u001b[39m \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m \u001b[39mand\u001b[39;00m object_hook \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m \u001b[39mand\u001b[39;00m\n\u001b[1;32m    344\u001b[0m         parse_int \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m \u001b[39mand\u001b[39;00m parse_float \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m \u001b[39mand\u001b[39;00m\n\u001b[1;32m    345\u001b[0m         parse_constant \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m \u001b[39mand\u001b[39;00m object_pairs_hook \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m \u001b[39mand\u001b[39;00m \u001b[39mnot\u001b[39;00m kw):\n\u001b[0;32m--> 346\u001b[0m     \u001b[39mreturn\u001b[39;00m _default_decoder\u001b[39m.\u001b[39;49mdecode(s)\n\u001b[1;32m    347\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mcls\u001b[39m \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n",
-      "File \u001b[0;32m~/anaconda3/envs/clase/lib/python3.10/json/decoder.py:337\u001b[0m, in \u001b[0;36mJSONDecoder.decode\u001b[0;34m(self, s, _w)\u001b[0m\n\u001b[1;32m    333\u001b[0m \u001b[39m\u001b[39m\u001b[39m\"\"\"Return the Python representation of ``s`` (a ``str`` instance\u001b[39;00m\n\u001b[1;32m    334\u001b[0m \u001b[39mcontaining a JSON document).\u001b[39;00m\n\u001b[1;32m    335\u001b[0m \n\u001b[1;32m    336\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m--> 337\u001b[0m obj, end \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mraw_decode(s, idx\u001b[39m=\u001b[39;49m_w(s, \u001b[39m0\u001b[39;49m)\u001b[39m.\u001b[39;49mend())\n\u001b[1;32m    338\u001b[0m end \u001b[39m=\u001b[39m _w(s, end)\u001b[39m.\u001b[39mend()\n",
-      "File \u001b[0;32m~/anaconda3/envs/clase/lib/python3.10/json/decoder.py:355\u001b[0m, in \u001b[0;36mJSONDecoder.raw_decode\u001b[0;34m(self, s, idx)\u001b[0m\n\u001b[1;32m    354\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mStopIteration\u001b[39;00m \u001b[39mas\u001b[39;00m err:\n\u001b[0;32m--> 355\u001b[0m     \u001b[39mraise\u001b[39;00m JSONDecodeError(\u001b[39m\"\u001b[39m\u001b[39mExpecting value\u001b[39m\u001b[39m\"\u001b[39m, s, err\u001b[39m.\u001b[39mvalue) \u001b[39mfrom\u001b[39;00m \u001b[39mNone\u001b[39;00m\n\u001b[1;32m    356\u001b[0m \u001b[39mreturn\u001b[39;00m obj, end\n",
-      "\u001b[0;31mJSONDecodeError\u001b[0m: Expecting value: line 8 column 1 (char 7)",
-      "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001b[0;31mJSONDecodeError\u001b[0m                           Traceback (most recent call last)",
-      "\u001b[1;32m/Users/mbp/Documents/IRONHACK/04.Classes/4.1-lab_api_scavengers_game/your-code/challenge-3.ipynb Cell 5\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/mbp/Documents/IRONHACK/04.Classes/4.1-lab_api_scavengers_game/your-code/challenge-3.ipynb#W3sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m res\u001b[39m.\u001b[39;49mjson()\n",
-      "File \u001b[0;32m~/anaconda3/envs/clase/lib/python3.10/site-packages/requests/models.py:975\u001b[0m, in \u001b[0;36mResponse.json\u001b[0;34m(self, **kwargs)\u001b[0m\n\u001b[1;32m    971\u001b[0m     \u001b[39mreturn\u001b[39;00m complexjson\u001b[39m.\u001b[39mloads(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mtext, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n\u001b[1;32m    972\u001b[0m \u001b[39mexcept\u001b[39;00m JSONDecodeError \u001b[39mas\u001b[39;00m e:\n\u001b[1;32m    973\u001b[0m     \u001b[39m# Catch JSON-related errors and raise as requests.JSONDecodeError\u001b[39;00m\n\u001b[1;32m    974\u001b[0m     \u001b[39m# This aliases json.JSONDecodeError and simplejson.JSONDecodeError\u001b[39;00m\n\u001b[0;32m--> 975\u001b[0m     \u001b[39mraise\u001b[39;00m RequestsJSONDecodeError(e\u001b[39m.\u001b[39mmsg, e\u001b[39m.\u001b[39mdoc, e\u001b[39m.\u001b[39mpos)\n",
-      "\u001b[0;31mJSONDecodeError\u001b[0m: Expecting value: line 8 column 1 (char 7)"
-     ]
+     "data": {
+      "text/plain": [
+       "{'id': 162375181,\n",
+       " 'node_id': 'MDEwOlJlcG9zaXRvcnkxNjIzNzUxODE=',\n",
+       " 'name': 'scavenger',\n",
+       " 'full_name': 'ironhack-datalabs/scavenger',\n",
+       " 'private': False,\n",
+       " 'owner': {'login': 'ironhack-datalabs',\n",
+       "  'id': 44225188,\n",
+       "  'node_id': 'MDEyOk9yZ2FuaXphdGlvbjQ0MjI1MTg4',\n",
+       "  'avatar_url': 'https://avatars.githubusercontent.com/u/44225188?v=4',\n",
+       "  'gravatar_id': '',\n",
+       "  'url': 'https://api.github.com/users/ironhack-datalabs',\n",
+       "  'html_url': 'https://github.com/ironhack-datalabs',\n",
+       "  'followers_url': 'https://api.github.com/users/ironhack-datalabs/followers',\n",
+       "  'following_url': 'https://api.github.com/users/ironhack-datalabs/following{/other_user}',\n",
+       "  'gists_url': 'https://api.github.com/users/ironhack-datalabs/gists{/gist_id}',\n",
+       "  'starred_url': 'https://api.github.com/users/ironhack-datalabs/starred{/owner}{/repo}',\n",
+       "  'subscriptions_url': 'https://api.github.com/users/ironhack-datalabs/subscriptions',\n",
+       "  'organizations_url': 'https://api.github.com/users/ironhack-datalabs/orgs',\n",
+       "  'repos_url': 'https://api.github.com/users/ironhack-datalabs/repos',\n",
+       "  'events_url': 'https://api.github.com/users/ironhack-datalabs/events{/privacy}',\n",
+       "  'received_events_url': 'https://api.github.com/users/ironhack-datalabs/received_events',\n",
+       "  'type': 'Organization',\n",
+       "  'site_admin': False},\n",
+       " 'html_url': 'https://github.com/ironhack-datalabs/scavenger',\n",
+       " 'description': None,\n",
+       " 'fork': False,\n",
+       " 'url': 'https://api.github.com/repos/ironhack-datalabs/scavenger',\n",
+       " 'forks_url': 'https://api.github.com/repos/ironhack-datalabs/scavenger/forks',\n",
+       " 'keys_url': 'https://api.github.com/repos/ironhack-datalabs/scavenger/keys{/key_id}',\n",
+       " 'collaborators_url': 'https://api.github.com/repos/ironhack-datalabs/scavenger/collaborators{/collaborator}',\n",
+       " 'teams_url': 'https://api.github.com/repos/ironhack-datalabs/scavenger/teams',\n",
+       " 'hooks_url': 'https://api.github.com/repos/ironhack-datalabs/scavenger/hooks',\n",
+       " 'issue_events_url': 'https://api.github.com/repos/ironhack-datalabs/scavenger/issues/events{/number}',\n",
+       " 'events_url': 'https://api.github.com/repos/ironhack-datalabs/scavenger/events',\n",
+       " 'assignees_url': 'https://api.github.com/repos/ironhack-datalabs/scavenger/assignees{/user}',\n",
+       " 'branches_url': 'https://api.github.com/repos/ironhack-datalabs/scavenger/branches{/branch}',\n",
+       " 'tags_url': 'https://api.github.com/repos/ironhack-datalabs/scavenger/tags',\n",
+       " 'blobs_url': 'https://api.github.com/repos/ironhack-datalabs/scavenger/git/blobs{/sha}',\n",
+       " 'git_tags_url': 'https://api.github.com/repos/ironhack-datalabs/scavenger/git/tags{/sha}',\n",
+       " 'git_refs_url': 'https://api.github.com/repos/ironhack-datalabs/scavenger/git/refs{/sha}',\n",
+       " 'trees_url': 'https://api.github.com/repos/ironhack-datalabs/scavenger/git/trees{/sha}',\n",
+       " 'statuses_url': 'https://api.github.com/repos/ironhack-datalabs/scavenger/statuses/{sha}',\n",
+       " 'languages_url': 'https://api.github.com/repos/ironhack-datalabs/scavenger/languages',\n",
+       " 'stargazers_url': 'https://api.github.com/repos/ironhack-datalabs/scavenger/stargazers',\n",
+       " 'contributors_url': 'https://api.github.com/repos/ironhack-datalabs/scavenger/contributors',\n",
+       " 'subscribers_url': 'https://api.github.com/repos/ironhack-datalabs/scavenger/subscribers',\n",
+       " 'subscription_url': 'https://api.github.com/repos/ironhack-datalabs/scavenger/subscription',\n",
+       " 'commits_url': 'https://api.github.com/repos/ironhack-datalabs/scavenger/commits{/sha}',\n",
+       " 'git_commits_url': 'https://api.github.com/repos/ironhack-datalabs/scavenger/git/commits{/sha}',\n",
+       " 'comments_url': 'https://api.github.com/repos/ironhack-datalabs/scavenger/comments{/number}',\n",
+       " 'issue_comment_url': 'https://api.github.com/repos/ironhack-datalabs/scavenger/issues/comments{/number}',\n",
+       " 'contents_url': 'https://api.github.com/repos/ironhack-datalabs/scavenger/contents/{+path}',\n",
+       " 'compare_url': 'https://api.github.com/repos/ironhack-datalabs/scavenger/compare/{base}...{head}',\n",
+       " 'merges_url': 'https://api.github.com/repos/ironhack-datalabs/scavenger/merges',\n",
+       " 'archive_url': 'https://api.github.com/repos/ironhack-datalabs/scavenger/{archive_format}{/ref}',\n",
+       " 'downloads_url': 'https://api.github.com/repos/ironhack-datalabs/scavenger/downloads',\n",
+       " 'issues_url': 'https://api.github.com/repos/ironhack-datalabs/scavenger/issues{/number}',\n",
+       " 'pulls_url': 'https://api.github.com/repos/ironhack-datalabs/scavenger/pulls{/number}',\n",
+       " 'milestones_url': 'https://api.github.com/repos/ironhack-datalabs/scavenger/milestones{/number}',\n",
+       " 'notifications_url': 'https://api.github.com/repos/ironhack-datalabs/scavenger/notifications{?since,all,participating}',\n",
+       " 'labels_url': 'https://api.github.com/repos/ironhack-datalabs/scavenger/labels{/name}',\n",
+       " 'releases_url': 'https://api.github.com/repos/ironhack-datalabs/scavenger/releases{/id}',\n",
+       " 'deployments_url': 'https://api.github.com/repos/ironhack-datalabs/scavenger/deployments',\n",
+       " 'created_at': '2018-12-19T03:01:30Z',\n",
+       " 'updated_at': '2018-12-19T03:05:09Z',\n",
+       " 'pushed_at': '2018-12-19T03:05:07Z',\n",
+       " 'git_url': 'git://github.com/ironhack-datalabs/scavenger.git',\n",
+       " 'ssh_url': 'git@github.com:ironhack-datalabs/scavenger.git',\n",
+       " 'clone_url': 'https://github.com/ironhack-datalabs/scavenger.git',\n",
+       " 'svn_url': 'https://github.com/ironhack-datalabs/scavenger',\n",
+       " 'homepage': None,\n",
+       " 'size': 3,\n",
+       " 'stargazers_count': 0,\n",
+       " 'watchers_count': 0,\n",
+       " 'language': None,\n",
+       " 'has_issues': True,\n",
+       " 'has_projects': True,\n",
+       " 'has_downloads': True,\n",
+       " 'has_wiki': True,\n",
+       " 'has_pages': False,\n",
+       " 'has_discussions': False,\n",
+       " 'forks_count': 20,\n",
+       " 'mirror_url': None,\n",
+       " 'archived': False,\n",
+       " 'disabled': False,\n",
+       " 'open_issues_count': 0,\n",
+       " 'license': None,\n",
+       " 'allow_forking': True,\n",
+       " 'is_template': False,\n",
+       " 'web_commit_signoff_required': False,\n",
+       " 'topics': [],\n",
+       " 'visibility': 'public',\n",
+       " 'forks': 20,\n",
+       " 'open_issues': 0,\n",
+       " 'watchers': 0,\n",
+       " 'default_branch': 'master',\n",
+       " 'temp_clone_token': None,\n",
+       " 'organization': {'login': 'ironhack-datalabs',\n",
+       "  'id': 44225188,\n",
+       "  'node_id': 'MDEyOk9yZ2FuaXphdGlvbjQ0MjI1MTg4',\n",
+       "  'avatar_url': 'https://avatars.githubusercontent.com/u/44225188?v=4',\n",
+       "  'gravatar_id': '',\n",
+       "  'url': 'https://api.github.com/users/ironhack-datalabs',\n",
+       "  'html_url': 'https://github.com/ironhack-datalabs',\n",
+       "  'followers_url': 'https://api.github.com/users/ironhack-datalabs/followers',\n",
+       "  'following_url': 'https://api.github.com/users/ironhack-datalabs/following{/other_user}',\n",
+       "  'gists_url': 'https://api.github.com/users/ironhack-datalabs/gists{/gist_id}',\n",
+       "  'starred_url': 'https://api.github.com/users/ironhack-datalabs/starred{/owner}{/repo}',\n",
+       "  'subscriptions_url': 'https://api.github.com/users/ironhack-datalabs/subscriptions',\n",
+       "  'organizations_url': 'https://api.github.com/users/ironhack-datalabs/orgs',\n",
+       "  'repos_url': 'https://api.github.com/users/ironhack-datalabs/repos',\n",
+       "  'events_url': 'https://api.github.com/users/ironhack-datalabs/events{/privacy}',\n",
+       "  'received_events_url': 'https://api.github.com/users/ironhack-datalabs/received_events',\n",
+       "  'type': 'Organization',\n",
+       "  'site_admin': False},\n",
+       " 'network_count': 20,\n",
+       " 'subscribers_count': 2}"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
