--- a/your-code/challenge-2.ipynb
+++ b/your-code/challenge-2.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "id": "c332bda3",
    "metadata": {},
    "outputs": [],
@@ -49,29 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "3a525a42",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Response [200]>"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "res = req.get(url, headers=HEADER)\n",
-    "res\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 3,
    "id": "ecf72aa7",
    "metadata": {},
    "outputs": [],
@@ -81,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 4,
    "id": "91a4916d",
    "metadata": {},
    "outputs": [
@@ -91,7 +69,7 @@
        "<Response [200]>"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,17 +81,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 5,
    "id": "d3c43dc1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'id': 708777053,\n",
-       " 'node_id': 'R_kgDOKj8UXQ',\n",
-       " 'name': '3.1-lab_intro_to_mysql',\n",
-       " 'full_name': 'Ankourii/3.1-lab_intro_to_mysql',\n",
+       "{'id': 702453191,\n",
+       " 'node_id': 'R_kgDOKd6Vxw',\n",
+       " 'name': '1.1-lab_bash',\n",
+       " 'full_name': 'Ankourii/1.1-lab_bash',\n",
        " 'private': False,\n",
        " 'owner': {'login': 'Ankourii',\n",
        "  'id': 145614469,\n",
@@ -133,58 +111,58 @@
        "  'received_events_url': 'https://api.github.com/users/Ankourii/received_events',\n",
        "  'type': 'User',\n",
        "  'site_admin': False},\n",
-       " 'html_url': 'https://github.com/Ankourii/3.1-lab_intro_to_mysql',\n",
+       " 'html_url': 'https://github.com/Ankourii/1.1-lab_bash',\n",
        " 'description': None,\n",
        " 'fork': True,\n",
-       " 'url': 'https://api.github.com/repos/Ankourii/3.1-lab_intro_to_mysql',\n",
-       " 'forks_url': 'https://api.github.com/repos/Ankourii/3.1-lab_intro_to_mysql/forks',\n",
-       " 'keys_url': 'https://api.github.com/repos/Ankourii/3.1-lab_intro_to_mysql/keys{/key_id}',\n",
-       " 'collaborators_url': 'https://api.github.com/repos/Ankourii/3.1-lab_intro_to_mysql/collaborators{/collaborator}',\n",
-       " 'teams_url': 'https://api.github.com/repos/Ankourii/3.1-lab_intro_to_mysql/teams',\n",
-       " 'hooks_url': 'https://api.github.com/repos/Ankourii/3.1-lab_intro_to_mysql/hooks',\n",
-       " 'issue_events_url': 'https://api.github.com/repos/Ankourii/3.1-lab_intro_to_mysql/issues/events{/number}',\n",
-       " 'events_url': 'https://api.github.com/repos/Ankourii/3.1-lab_intro_to_mysql/events',\n",
-       " 'assignees_url': 'https://api.github.com/repos/Ankourii/3.1-lab_intro_to_mysql/assignees{/user}',\n",
-       " 'branches_url': 'https://api.github.com/repos/Ankourii/3.1-lab_intro_to_mysql/branches{/branch}',\n",
-       " 'tags_url': 'https://api.github.com/repos/Ankourii/3.1-lab_intro_to_mysql/tags',\n",
-       " 'blobs_url': 'https://api.github.com/repos/Ankourii/3.1-lab_intro_to_mysql/git/blobs{/sha}',\n",
-       " 'git_tags_url': 'https://api.github.com/repos/Ankourii/3.1-lab_intro_to_mysql/git/tags{/sha}',\n",
-       " 'git_refs_url': 'https://api.github.com/repos/Ankourii/3.1-lab_intro_to_mysql/git/refs{/sha}',\n",
-       " 'trees_url': 'https://api.github.com/repos/Ankourii/3.1-lab_intro_to_mysql/git/trees{/sha}',\n",
-       " 'statuses_url': 'https://api.github.com/repos/Ankourii/3.1-lab_intro_to_mysql/statuses/{sha}',\n",
-       " 'languages_url': 'https://api.github.com/repos/Ankourii/3.1-lab_intro_to_mysql/languages',\n",
-       " 'stargazers_url': 'https://api.github.com/repos/Ankourii/3.1-lab_intro_to_mysql/stargazers',\n",
-       " 'contributors_url': 'https://api.github.com/repos/Ankourii/3.1-lab_intro_to_mysql/contributors',\n",
-       " 'subscribers_url': 'https://api.github.com/repos/Ankourii/3.1-lab_intro_to_mysql/subscribers',\n",
-       " 'subscription_url': 'https://api.github.com/repos/Ankourii/3.1-lab_intro_to_mysql/subscription',\n",
-       " 'commits_url': 'https://api.github.com/repos/Ankourii/3.1-lab_intro_to_mysql/commits{/sha}',\n",
-       " 'git_commits_url': 'https://api.github.com/repos/Ankourii/3.1-lab_intro_to_mysql/git/commits{/sha}',\n",
-       " 'comments_url': 'https://api.github.com/repos/Ankourii/3.1-lab_intro_to_mysql/comments{/number}',\n",
-       " 'issue_comment_url': 'https://api.github.com/repos/Ankourii/3.1-lab_intro_to_mysql/issues/comments{/number}',\n",
-       " 'contents_url': 'https://api.github.com/repos/Ankourii/3.1-lab_intro_to_mysql/contents/{+path}',\n",
-       " 'compare_url': 'https://api.github.com/repos/Ankourii/3.1-lab_intro_to_mysql/compare/{base}...{head}',\n",
-       " 'merges_url': 'https://api.github.com/repos/Ankourii/3.1-lab_intro_to_mysql/merges',\n",
-       " 'archive_url': 'https://api.github.com/repos/Ankourii/3.1-lab_intro_to_mysql/{archive_format}{/ref}',\n",
-       " 'downloads_url': 'https://api.github.com/repos/Ankourii/3.1-lab_intro_to_mysql/downloads',\n",
-       " 'issues_url': 'https://api.github.com/repos/Ankourii/3.1-lab_intro_to_mysql/issues{/number}',\n",
-       " 'pulls_url': 'https://api.github.com/repos/Ankourii/3.1-lab_intro_to_mysql/pulls{/number}',\n",
-       " 'milestones_url': 'https://api.github.com/repos/Ankourii/3.1-lab_intro_to_mysql/milestones{/number}',\n",
-       " 'notifications_url': 'https://api.github.com/repos/Ankourii/3.1-lab_intro_to_mysql/notifications{?since,all,participating}',\n",
-       " 'labels_url': 'https://api.github.com/repos/Ankourii/3.1-lab_intro_to_mysql/labels{/name}',\n",
-       " 'releases_url': 'https://api.github.com/repos/Ankourii/3.1-lab_intro_to_mysql/releases{/id}',\n",
-       " 'deployments_url': 'https://api.github.com/repos/Ankourii/3.1-lab_intro_to_mysql/deployments',\n",
-       " 'created_at': '2023-10-23T11:23:15Z',\n",
-       " 'updated_at': '2023-10-23T11:23:15Z',\n",
-       " 'pushed_at': '2023-10-24T13:49:22Z',\n",
-       " 'git_url': 'git://github.com/Ankourii/3.1-lab_intro_to_mysql.git',\n",
-       " 'ssh_url': 'git@github.com:Ankourii/3.1-lab_intro_to_mysql.git',\n",
-       " 'clone_url': 'https://github.com/Ankourii/3.1-lab_intro_to_mysql.git',\n",
-       " 'svn_url': 'https://github.com/Ankourii/3.1-lab_intro_to_mysql',\n",
+       " 'url': 'https://api.github.com/repos/Ankourii/1.1-lab_bash',\n",
+       " 'forks_url': 'https://api.github.com/repos/Ankourii/1.1-lab_bash/forks',\n",
+       " 'keys_url': 'https://api.github.com/repos/Ankourii/1.1-lab_bash/keys{/key_id}',\n",
+       " 'collaborators_url': 'https://api.github.com/repos/Ankourii/1.1-lab_bash/collaborators{/collaborator}',\n",
+       " 'teams_url': 'https://api.github.com/repos/Ankourii/1.1-lab_bash/teams',\n",
+       " 'hooks_url': 'https://api.github.com/repos/Ankourii/1.1-lab_bash/hooks',\n",
+       " 'issue_events_url': 'https://api.github.com/repos/Ankourii/1.1-lab_bash/issues/events{/number}',\n",
+       " 'events_url': 'https://api.github.com/repos/Ankourii/1.1-lab_bash/events',\n",
+       " 'assignees_url': 'https://api.github.com/repos/Ankourii/1.1-lab_bash/assignees{/user}',\n",
+       " 'branches_url': 'https://api.github.com/repos/Ankourii/1.1-lab_bash/branches{/branch}',\n",
+       " 'tags_url': 'https://api.github.com/repos/Ankourii/1.1-lab_bash/tags',\n",
+       " 'blobs_url': 'https://api.github.com/repos/Ankourii/1.1-lab_bash/git/blobs{/sha}',\n",
+       " 'git_tags_url': 'https://api.github.com/repos/Ankourii/1.1-lab_bash/git/tags{/sha}',\n",
+       " 'git_refs_url': 'https://api.github.com/repos/Ankourii/1.1-lab_bash/git/refs{/sha}',\n",
+       " 'trees_url': 'https://api.github.com/repos/Ankourii/1.1-lab_bash/git/trees{/sha}',\n",
+       " 'statuses_url': 'https://api.github.com/repos/Ankourii/1.1-lab_bash/statuses/{sha}',\n",
+       " 'languages_url': 'https://api.github.com/repos/Ankourii/1.1-lab_bash/languages',\n",
+       " 'stargazers_url': 'https://api.github.com/repos/Ankourii/1.1-lab_bash/stargazers',\n",
+       " 'contributors_url': 'https://api.github.com/repos/Ankourii/1.1-lab_bash/contributors',\n",
+       " 'subscribers_url': 'https://api.github.com/repos/Ankourii/1.1-lab_bash/subscribers',\n",
+       " 'subscription_url': 'https://api.github.com/repos/Ankourii/1.1-lab_bash/subscription',\n",
+       " 'commits_url': 'https://api.github.com/repos/Ankourii/1.1-lab_bash/commits{/sha}',\n",
+       " 'git_commits_url': 'https://api.github.com/repos/Ankourii/1.1-lab_bash/git/commits{/sha}',\n",
+       " 'comments_url': 'https://api.github.com/repos/Ankourii/1.1-lab_bash/comments{/number}',\n",
+       " 'issue_comment_url': 'https://api.github.com/repos/Ankourii/1.1-lab_bash/issues/comments{/number}',\n",
+       " 'contents_url': 'https://api.github.com/repos/Ankourii/1.1-lab_bash/contents/{+path}',\n",
+       " 'compare_url': 'https://api.github.com/repos/Ankourii/1.1-lab_bash/compare/{base}...{head}',\n",
+       " 'merges_url': 'https://api.github.com/repos/Ankourii/1.1-lab_bash/merges',\n",
+       " 'archive_url': 'https://api.github.com/repos/Ankourii/1.1-lab_bash/{archive_format}{/ref}',\n",
+       " 'downloads_url': 'https://api.github.com/repos/Ankourii/1.1-lab_bash/downloads',\n",
+       " 'issues_url': 'https://api.github.com/repos/Ankourii/1.1-lab_bash/issues{/number}',\n",
+       " 'pulls_url': 'https://api.github.com/repos/Ankourii/1.1-lab_bash/pulls{/number}',\n",
+       " 'milestones_url': 'https://api.github.com/repos/Ankourii/1.1-lab_bash/milestones{/number}',\n",
+       " 'notifications_url': 'https://api.github.com/repos/Ankourii/1.1-lab_bash/notifications{?since,all,participating}',\n",
+       " 'labels_url': 'https://api.github.com/repos/Ankourii/1.1-lab_bash/labels{/name}',\n",
+       " 'releases_url': 'https://api.github.com/repos/Ankourii/1.1-lab_bash/releases{/id}',\n",
+       " 'deployments_url': 'https://api.github.com/repos/Ankourii/1.1-lab_bash/deployments',\n",
+       " 'created_at': '2023-10-09T10:49:22Z',\n",
+       " 'updated_at': '2023-10-09T11:41:11Z',\n",
+       " 'pushed_at': '2023-10-09T16:09:17Z',\n",
+       " 'git_url': 'git://github.com/Ankourii/1.1-lab_bash.git',\n",
+       " 'ssh_url': 'git@github.com:Ankourii/1.1-lab_bash.git',\n",
+       " 'clone_url': 'https://github.com/Ankourii/1.1-lab_bash.git',\n",
+       " 'svn_url': 'https://github.com/Ankourii/1.1-lab_bash',\n",
        " 'homepage': 'https://github.com',\n",
-       " 'size': 184,\n",
+       " 'size': 5,\n",
        " 'stargazers_count': 0,\n",
        " 'watchers_count': 0,\n",
-       " 'language': None,\n",
+       " 'language': 'Jupyter Notebook',\n",
        " 'has_issues': False,\n",
        " 'has_projects': True,\n",
        " 'has_downloads': True,\n",
@@ -213,51 +191,51 @@
        "  'pull': True}}"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "commits_week_3= res.json()[-8:-5]\n",
+    "commits= res.json() \n",
     "\n",
-    "commits_week_3[0]"
+    "commits[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 6,
    "id": "8c00b5af",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'https://api.github.com/repos/Ankourii/3.2-lab_mysql_select/commits{/sha}'"
+       "'https://api.github.com/repos/Ankourii/1.1-lab_bash/commits{/sha}'"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "commits_week_3[1]['commits_url']"
+    "commits[0]['commits_url']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 7,
    "id": "be860c23",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<Response [200]>"
+       "<Response [403]>"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,50 +249,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
-   "id": "06c2c377",
+   "execution_count": 8,
+   "id": "86e9615c",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4"
-      ]
-     },
-     "execution_count": 74,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "len(resp.json())"
+    "commit_links= [e['commits_url'] for e in commits]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
-   "id": "941a88bb",
+   "execution_count": 9,
+   "id": "ece9dc0d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "commit_links_week_3=commit_links[15:19]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "36fdde08",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[2, 2, 2]"
-      ]
-     },
-     "execution_count": 82,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'commit_per_lab' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[10], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m commit_per_lab\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m link \u001b[38;5;129;01min\u001b[39;00m commit_links_week_3:\n\u001b[0;32m      3\u001b[0m     link\u001b[38;5;241m=\u001b[39mlink\u001b[38;5;241m.\u001b[39mreplace(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m{\u001b[39m\u001b[38;5;124m/sha}\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'commit_per_lab' is not defined"
+     ]
     }
    ],
    "source": [
-    "commits_per_lab = []\n",
-    "for commit_info in commits_week_3:\n",
-    "    url = commit_info['commits_url']\n",
-    "    res = req.get(url)\n",
-    "    commits_per_lab.append(len(res.json()))\n",
-    "\n",
-    "commits_per_lab"
+    "commit_per_lab=\n",
+    "for link in commit_links_week_3:\n",
+    "    link=link.replace('{/sha}','')\n",
+    "    resp = req.get(link, headers=HEADER)\n",
+    "    commits=resp.json()\n",
+    "    commit_per_lab = []\n",
+    "    for commit in commits:\n",
+    "            lab_commit_count += 1\n",
+    "            commit_per_lab.append(lab_commit_count)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "327ab410",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "commit_per_lab"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "58e8b2f3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "total_commits=sum(commit_per_lab)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e1ca7bb4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "total_commits"
    ]
   }
  ],
