--- a/your-code/challenge-1.ipynb
+++ b/your-code/challenge-1.ipynb
@@ -2,10 +2,42 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: requests in c:\\users\\blanx\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (2.31.0)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in c:\\users\\blanx\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from requests) (3.3.1)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\blanx\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from requests) (3.4)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\users\\blanx\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from requests) (2.0.7)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\blanx\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from requests) (2023.7.22)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip available: 22.3.1 -> 23.3.1\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+     ]
+    }
+   ],
+   "source": [
+    "#%pip install requests"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pandas as pd\n",
     "import json\n",
     "import requests"
    ]
@@ -21,12 +53,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
+    "''' \n",
     "import os\n",
-    "from dotenv import load_dotenv"
+    "from dotenv import load_dotenv\n",
+    "'''"
    ]
   },
   {
@@ -55,7 +89,7 @@
     }
    ],
    "source": [
-    "load_dotenv()"
+    "#load_dotenv()"
    ]
   },
   {
@@ -64,7 +98,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "github = os.getenv(\"token\")"
+    "#github = os.getenv(\"token\")"
    ]
   },
   {
@@ -102,6 +136,50 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Response [403]>"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "url = \"https://api.github.com\"\n",
+    "res = requests.get(url)\n",
+    "res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'message': \"API rate limit exceeded for 2.136.118.161. (But here's the good news: Authenticated requests get a higher rate limit. Check out the documentation for more details.)\",\n",
+       " 'documentation_url': 'https://docs.github.com/rest/overview/resources-in-the-rest-api#rate-limiting'}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res_api = res.json()\n",
+    "res_api"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -124,7 +202,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.11.1"
   },
   "toc": {
    "base_numbering": 1,
